# USB-Mouse-Pcap-Visualizer

./: .pre-commit-config.yaml  README.md  UsbMiceDataHacker.py  mice.pcap  pyproject.toml  usb-mouse-pcap-visualizer.py
assets/: index.html  index.js  style.css
assets/example/XNUCA/: data.csv
