[project]
name = "usb-mouse-pcap-visualizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "isort>=7.0.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pyautogui>=0.9.54",
    "pyshark>=0.6",
    "structlog",
    "tqdm>=4.67.1",
    "typer>=0.20.0",
]
